@@ -229,6 +229,7 @@
 	- fix: src.rpm installs need fd pos at payload.
 	- python: add return codes for rollbacks and fooDB methods.
 	- avoid generating fingerprints for locale/zoneinfo sub-directories.
+	- python: add (optional) ts.check() callback.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
